src/main/java/com/example/demo/global/exception/error/member/DuplicateMemberPasswordException.java
package com.example.demo.global.exception.error.member;

public class DuplicateMemberPasswordException {
    public DuplicateMemberPasswordException() {
        super();
    }
}
